--- a/host/configure.ac
+++ b/host/configure.ac
@@ -1,10 +1,25 @@
-AC_INIT(thermostat, [0.1], [thomas@exmakhina.com])
-AC_CONFIG_AUX_DIR(config)
-AC_CONFIG_SRCDIR(src/main.c)
+#                                               -*- Autoconf -*-
+# Process this file with autoconf to produce a configure script.
 
+AC_PREREQ([2.68])
+AC_INIT([thermostat], [0.1], [thomas@exmakhina.com])
 AM_INIT_AUTOMAKE
+AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_HEADERS([config.h])
 
+# Checks for programs.
 AC_PROG_CC
-AM_PROG_CC_C_O
 
-AC_OUTPUT(Makefile src/Makefile)
+# Checks for libraries.
+
+# Checks for header files.
+AC_CHECK_HEADERS([fcntl.h stdint.h string.h termios.h unistd.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_TYPE_UINT16_T
+AC_TYPE_UINT8_T
+
+# Checks for library functions.
+AC_CHECK_FUNCS([memset])
+
+AC_OUTPUT(Makefile)
