--- a/host/configure.ac
+++ b/host/configure.ac
@@ -4,11 +4,12 @@
 AC_PREREQ([2.68])
 AC_INIT([thermostat], [0.1], [thomas@exmakhina.com])
 AM_INIT_AUTOMAKE
-AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_CXX
 
 # Checks for libraries.
 
