add a message queue class.

--- a/host/Makefile.am
+++ b/host/Makefile.am
@@ -4,6 +4,8 @@
 ## make time. The ${ACLOCAL_FLAGS} variable is picked up from the environment
 ## to provide a way for the user to supply additional arguments.
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
+AM_CXXFLAGS = -std=c++0x 
+
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
 bin_PROGRAMS = thermostat
@@ -19,4 +21,4 @@ thermostat_SOURCES += src/model/peripherals/serial_if/serial_if.c \
                        
 thermostat_SOURCES += src/controller/controller.cpp
 
- 
+
